--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-  "TOKEN": "ODQxODU4ODU0MjU3MTY0MzE4.YJs4Jw.ha98Qu8qmkR2paGPmBPayFghoSQ",
+  "TOKEN": "MTAwMDUxMDkxNzE3MzMzMDAzMA.GzLpXH.4tfCIW-JjKz2Txjg23qop2vFkaZ1AgxIouo9u8",
   "PREFIX": "+",
-  "approveemoji": "769665713124016128",
-  "denyemoji": "770326304473350145",
-  "erroremoji": "768460113622859788"
+  "approveemoji": "976576918918946876",
+  "denyemoji": "976576918918946876",
+  "erroremoji": "976576918918946876"
 }
